PLY_test/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLE_QUOTE
    PRINT
    TRUE
    PERIOD
    AND
    FALSE
    SINGLE_QUOTE
    NOT
    OR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID NEWLINE hardware vars assign functions main
Rule 2     empty -> <empty>
Rule 3     hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration
Rule 4     camDeclaration -> empty
Rule 5     camDeclaration -> CAM WEBCAM COLON ID NEWLINE
Rule 6     camDeclaration -> CAM PICAM COLON ID NEWLINE
Rule 7     inputsDeclaration -> empty
Rule 8     inputsDeclaration -> INPUT pinList NEWLINE
Rule 9     outputsDeclaration -> empty
Rule 10    outputsDeclaration -> OUTPUT pinList NEWLINE
Rule 11    pwmDeclaration -> empty
Rule 12    pwmDeclaration -> PWM pinList NEWLINE
Rule 13    pinList -> C_INT COLON ID
Rule 14    pinList -> C_INT COLON ID COMMA pinList
Rule 15    vars -> tipo idList NEWLINE
Rule 16    idList -> ID
Rule 17    idList -> ID COMMA idList
Rule 18    tipo -> BOOL
Rule 19    tipo -> INT
Rule 20    tipo -> FLOAT
Rule 21    tipo -> CHAR
Rule 22    tipo -> STRING
Rule 23    tipo -> IMAGE
Rule 24    functions -> tipo ID LPAREN RPAREN NEWLINE block
Rule 25    functions -> tipo ID LPAREN tipo ID parameterList RPAREN NEWLINE block
Rule 26    functions -> VOID ID LPAREN RPAREN NEWLINE block
Rule 27    functions -> VOID ID LPAREN tipo ID parameterList RPAREN NEWLINE block
Rule 28    parameterList -> empty
Rule 29    parameterList -> COMMA tipo ID parameterList
Rule 30    assign -> ID EQUAL expression NEWLINE
Rule 31    main -> VOID MAIN LPAREN RPAREN NEWLINE block
Rule 32    main -> VOID MAIN LPAREN tipo ID parameterList RPAREN NEWLINE block
Rule 33    block -> empty
Rule 34    block -> TAB statement moreStatements
Rule 35    moreStatements -> empty
Rule 36    moreStatements -> NEWLINE TAB statement moreStatements
Rule 37    statement -> assign
Rule 38    statement -> condition
Rule 39    statement -> cycle
Rule 40    statement -> funct NEWLINE
Rule 41    condition -> IF expression COLON NEWLINE block
Rule 42    condition -> IF expression COLON NEWLINE block ELSE COLON NEWLINE block
Rule 43    cycle -> WHILE expression COLON NEWLINE block
Rule 44    cycle -> DO COLON NEWLINE block WHILE expression NEWLINE
Rule 45    funct -> ID LPAREN RPAREN
Rule 46    funct -> ID LPAREN expression expressionList RPAREN
Rule 47    expressionList -> empty
Rule 48    expressionList -> COMMA expression expressionList
Rule 49    expression -> exp
Rule 50    expression -> exp compareToken exp
Rule 51    compareToken -> GREATER_THAN
Rule 52    compareToken -> LESS_THAN
Rule 53    compareToken -> LESS_EQUAL_THAN
Rule 54    compareToken -> GREATER_EQUAL_THAN
Rule 55    compareToken -> NOT_EQUAL_THAN
Rule 56    compareToken -> SAME_AS
Rule 57    exp -> term moreTerms
Rule 58    moreTerms -> empty
Rule 59    moreTerms -> PLUS term moreTerms
Rule 60    moreTerms -> MINUS term moreTerms
Rule 61    term -> factor moreFactors
Rule 62    moreFactors -> empty
Rule 63    moreFactors -> DIVIDE factor moreFactors
Rule 64    moreFactors -> TIMES factor moreFactors
Rule 65    moreFactors -> MOD factor moreFactors
Rule 66    factor -> LPAREN expression RPAREN
Rule 67    factor -> cvar
Rule 68    factor -> funct
Rule 69    cvar -> ID
Rule 70    cvar -> C_BOOL
Rule 71    cvar -> C_INT
Rule 72    cvar -> C_FLOAT
Rule 73    cvar -> C_CHAR
Rule 74    cvar -> C_STRING

Terminals, with rules where they appear

AND                  : 
BOOL                 : 18
CAM                  : 5 6
CHAR                 : 21
COLON                : 5 6 13 14 41 42 42 43 44
COMMA                : 14 17 29 48
C_BOOL               : 70
C_CHAR               : 73
C_FLOAT              : 72
C_INT                : 13 14 71
C_STRING             : 74
DIVIDE               : 63
DO                   : 44
DOUBLE_QUOTE         : 
ELSE                 : 42
EQUAL                : 30
FALSE                : 
FLOAT                : 20
GREATER_EQUAL_THAN   : 54
GREATER_THAN         : 51
ID                   : 1 5 6 13 14 16 17 24 25 25 26 27 27 29 30 32 45 46 69
IF                   : 41 42
IMAGE                : 23
INPUT                : 8
INT                  : 19
LESS_EQUAL_THAN      : 53
LESS_THAN            : 52
LPAREN               : 24 25 26 27 31 32 45 46 66
MAIN                 : 31 32
MINUS                : 60
MOD                  : 65
NEWLINE              : 1 5 6 8 10 12 15 24 25 26 27 30 31 32 36 40 41 42 42 43 44 44
NOT                  : 
NOT_EQUAL_THAN       : 55
OR                   : 
OUTPUT               : 10
PERIOD               : 
PICAM                : 6
PLUS                 : 59
PRINT                : 
PROGRAM              : 1
PWM                  : 12
RPAREN               : 24 25 26 27 31 32 45 46 66
SAME_AS              : 56
SINGLE_QUOTE         : 
STRING               : 22
TAB                  : 34 36
TIMES                : 64
TRUE                 : 
VOID                 : 26 27 31 32
WEBCAM               : 5
WHILE                : 43 44
error                : 

Nonterminals, with rules where they appear

assign               : 1 37
block                : 24 25 26 27 31 32 41 42 42 43 44
camDeclaration       : 3
compareToken         : 50
condition            : 38
cvar                 : 67
cycle                : 39
empty                : 4 7 9 11 28 33 35 47 58 62
exp                  : 49 50 50
expression           : 30 41 42 43 44 46 48 66
expressionList       : 46 48
factor               : 61 63 64 65
funct                : 40 68
functions            : 1
hardware             : 1
idList               : 15 17
inputsDeclaration    : 3
main                 : 1
moreFactors          : 61 63 64 65
moreStatements       : 34 36
moreTerms            : 57 59 60
outputsDeclaration   : 3
parameterList        : 25 27 29 32
pinList              : 8 10 12 14
program              : 0
pwmDeclaration       : 3
statement            : 34 36
term                 : 57 59 60
tipo                 : 15 24 25 25 27 29 32
vars                 : 1

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID NEWLINE hardware vars assign functions main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID NEWLINE hardware vars assign functions main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . NEWLINE hardware vars assign functions main

    NEWLINE         shift and go to state 4


state 4

    (1) program -> PROGRAM ID NEWLINE . hardware vars assign functions main
    (3) hardware -> . camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration
    (4) camDeclaration -> . empty
    (5) camDeclaration -> . CAM WEBCAM COLON ID NEWLINE
    (6) camDeclaration -> . CAM PICAM COLON ID NEWLINE
    (2) empty -> .

    CAM             shift and go to state 6
    INPUT           reduce using rule 2 (empty -> .)
    OUTPUT          reduce using rule 2 (empty -> .)
    PWM             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    CHAR            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    IMAGE           reduce using rule 2 (empty -> .)

    camDeclaration                 shift and go to state 7
    hardware                       shift and go to state 5
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID NEWLINE hardware . vars assign functions main
    (15) vars -> . tipo idList NEWLINE
    (18) tipo -> . BOOL
    (19) tipo -> . INT
    (20) tipo -> . FLOAT
    (21) tipo -> . CHAR
    (22) tipo -> . STRING
    (23) tipo -> . IMAGE

    BOOL            shift and go to state 15
    INT             shift and go to state 13
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 9
    STRING          shift and go to state 16
    IMAGE           shift and go to state 14

    tipo                           shift and go to state 11
    vars                           shift and go to state 12

state 6

    (5) camDeclaration -> CAM . WEBCAM COLON ID NEWLINE
    (6) camDeclaration -> CAM . PICAM COLON ID NEWLINE

    WEBCAM          shift and go to state 17
    PICAM           shift and go to state 18


state 7

    (3) hardware -> camDeclaration . inputsDeclaration outputsDeclaration pwmDeclaration
    (7) inputsDeclaration -> . empty
    (8) inputsDeclaration -> . INPUT pinList NEWLINE
    (2) empty -> .

    INPUT           shift and go to state 20
    OUTPUT          reduce using rule 2 (empty -> .)
    PWM             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    CHAR            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    IMAGE           reduce using rule 2 (empty -> .)

    inputsDeclaration              shift and go to state 19
    empty                          shift and go to state 21

state 8

    (4) camDeclaration -> empty .

    INPUT           reduce using rule 4 (camDeclaration -> empty .)
    OUTPUT          reduce using rule 4 (camDeclaration -> empty .)
    PWM             reduce using rule 4 (camDeclaration -> empty .)
    BOOL            reduce using rule 4 (camDeclaration -> empty .)
    INT             reduce using rule 4 (camDeclaration -> empty .)
    FLOAT           reduce using rule 4 (camDeclaration -> empty .)
    CHAR            reduce using rule 4 (camDeclaration -> empty .)
    STRING          reduce using rule 4 (camDeclaration -> empty .)
    IMAGE           reduce using rule 4 (camDeclaration -> empty .)


state 9

    (21) tipo -> CHAR .

    ID              reduce using rule 21 (tipo -> CHAR .)


state 10

    (20) tipo -> FLOAT .

    ID              reduce using rule 20 (tipo -> FLOAT .)


state 11

    (15) vars -> tipo . idList NEWLINE
    (16) idList -> . ID
    (17) idList -> . ID COMMA idList

    ID              shift and go to state 23

    idList                         shift and go to state 22

state 12

    (1) program -> PROGRAM ID NEWLINE hardware vars . assign functions main
    (30) assign -> . ID EQUAL expression NEWLINE

    ID              shift and go to state 25

    assign                         shift and go to state 24

state 13

    (19) tipo -> INT .

    ID              reduce using rule 19 (tipo -> INT .)


state 14

    (23) tipo -> IMAGE .

    ID              reduce using rule 23 (tipo -> IMAGE .)


state 15

    (18) tipo -> BOOL .

    ID              reduce using rule 18 (tipo -> BOOL .)


state 16

    (22) tipo -> STRING .

    ID              reduce using rule 22 (tipo -> STRING .)


state 17

    (5) camDeclaration -> CAM WEBCAM . COLON ID NEWLINE

    COLON           shift and go to state 26


state 18

    (6) camDeclaration -> CAM PICAM . COLON ID NEWLINE

    COLON           shift and go to state 27


state 19

    (3) hardware -> camDeclaration inputsDeclaration . outputsDeclaration pwmDeclaration
    (9) outputsDeclaration -> . empty
    (10) outputsDeclaration -> . OUTPUT pinList NEWLINE
    (2) empty -> .

    OUTPUT          shift and go to state 29
    PWM             reduce using rule 2 (empty -> .)
    BOOL            reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    CHAR            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    IMAGE           reduce using rule 2 (empty -> .)

    outputsDeclaration             shift and go to state 28
    empty                          shift and go to state 30

state 20

    (8) inputsDeclaration -> INPUT . pinList NEWLINE
    (13) pinList -> . C_INT COLON ID
    (14) pinList -> . C_INT COLON ID COMMA pinList

    C_INT           shift and go to state 32

    pinList                        shift and go to state 31

state 21

    (7) inputsDeclaration -> empty .

    OUTPUT          reduce using rule 7 (inputsDeclaration -> empty .)
    PWM             reduce using rule 7 (inputsDeclaration -> empty .)
    BOOL            reduce using rule 7 (inputsDeclaration -> empty .)
    INT             reduce using rule 7 (inputsDeclaration -> empty .)
    FLOAT           reduce using rule 7 (inputsDeclaration -> empty .)
    CHAR            reduce using rule 7 (inputsDeclaration -> empty .)
    STRING          reduce using rule 7 (inputsDeclaration -> empty .)
    IMAGE           reduce using rule 7 (inputsDeclaration -> empty .)


state 22

    (15) vars -> tipo idList . NEWLINE

    NEWLINE         shift and go to state 33


state 23

    (16) idList -> ID .
    (17) idList -> ID . COMMA idList

    NEWLINE         reduce using rule 16 (idList -> ID .)
    COMMA           shift and go to state 34


state 24

    (1) program -> PROGRAM ID NEWLINE hardware vars assign . functions main
    (24) functions -> . tipo ID LPAREN RPAREN NEWLINE block
    (25) functions -> . tipo ID LPAREN tipo ID parameterList RPAREN NEWLINE block
    (26) functions -> . VOID ID LPAREN RPAREN NEWLINE block
    (27) functions -> . VOID ID LPAREN tipo ID parameterList RPAREN NEWLINE block
    (18) tipo -> . BOOL
    (19) tipo -> . INT
    (20) tipo -> . FLOAT
    (21) tipo -> . CHAR
    (22) tipo -> . STRING
    (23) tipo -> . IMAGE

    VOID            shift and go to state 37
    BOOL            shift and go to state 15
    INT             shift and go to state 13
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 9
    STRING          shift and go to state 16
    IMAGE           shift and go to state 14

    functions                      shift and go to state 35
    tipo                           shift and go to state 36

state 25

    (30) assign -> ID . EQUAL expression NEWLINE

    EQUAL           shift and go to state 38


state 26

    (5) camDeclaration -> CAM WEBCAM COLON . ID NEWLINE

    ID              shift and go to state 39


state 27

    (6) camDeclaration -> CAM PICAM COLON . ID NEWLINE

    ID              shift and go to state 40


state 28

    (3) hardware -> camDeclaration inputsDeclaration outputsDeclaration . pwmDeclaration
    (11) pwmDeclaration -> . empty
    (12) pwmDeclaration -> . PWM pinList NEWLINE
    (2) empty -> .

    PWM             shift and go to state 42
    BOOL            reduce using rule 2 (empty -> .)
    INT             reduce using rule 2 (empty -> .)
    FLOAT           reduce using rule 2 (empty -> .)
    CHAR            reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)
    IMAGE           reduce using rule 2 (empty -> .)

    pwmDeclaration                 shift and go to state 41
    empty                          shift and go to state 43

state 29

    (10) outputsDeclaration -> OUTPUT . pinList NEWLINE
    (13) pinList -> . C_INT COLON ID
    (14) pinList -> . C_INT COLON ID COMMA pinList

    C_INT           shift and go to state 32

    pinList                        shift and go to state 44

state 30

    (9) outputsDeclaration -> empty .

    PWM             reduce using rule 9 (outputsDeclaration -> empty .)
    BOOL            reduce using rule 9 (outputsDeclaration -> empty .)
    INT             reduce using rule 9 (outputsDeclaration -> empty .)
    FLOAT           reduce using rule 9 (outputsDeclaration -> empty .)
    CHAR            reduce using rule 9 (outputsDeclaration -> empty .)
    STRING          reduce using rule 9 (outputsDeclaration -> empty .)
    IMAGE           reduce using rule 9 (outputsDeclaration -> empty .)


state 31

    (8) inputsDeclaration -> INPUT pinList . NEWLINE

    NEWLINE         shift and go to state 45


state 32

    (13) pinList -> C_INT . COLON ID
    (14) pinList -> C_INT . COLON ID COMMA pinList

    COLON           shift and go to state 46


state 33

    (15) vars -> tipo idList NEWLINE .

    ID              reduce using rule 15 (vars -> tipo idList NEWLINE .)


state 34

    (17) idList -> ID COMMA . idList
    (16) idList -> . ID
    (17) idList -> . ID COMMA idList

    ID              shift and go to state 23

    idList                         shift and go to state 47

state 35

    (1) program -> PROGRAM ID NEWLINE hardware vars assign functions . main
    (31) main -> . VOID MAIN LPAREN RPAREN NEWLINE block
    (32) main -> . VOID MAIN LPAREN tipo ID parameterList RPAREN NEWLINE block

    VOID            shift and go to state 48

    main                           shift and go to state 49

state 36

    (24) functions -> tipo . ID LPAREN RPAREN NEWLINE block
    (25) functions -> tipo . ID LPAREN tipo ID parameterList RPAREN NEWLINE block

    ID              shift and go to state 50


state 37

    (26) functions -> VOID . ID LPAREN RPAREN NEWLINE block
    (27) functions -> VOID . ID LPAREN tipo ID parameterList RPAREN NEWLINE block

    ID              shift and go to state 51


state 38

    (30) assign -> ID EQUAL . expression NEWLINE
    (49) expression -> . exp
    (50) expression -> . exp compareToken exp
    (57) exp -> . term moreTerms
    (61) term -> . factor moreFactors
    (66) factor -> . LPAREN expression RPAREN
    (67) factor -> . cvar
    (68) factor -> . funct
    (69) cvar -> . ID
    (70) cvar -> . C_BOOL
    (71) cvar -> . C_INT
    (72) cvar -> . C_FLOAT
    (73) cvar -> . C_CHAR
    (74) cvar -> . C_STRING
    (45) funct -> . ID LPAREN RPAREN
    (46) funct -> . ID LPAREN expression expressionList RPAREN

    LPAREN          shift and go to state 53
    ID              shift and go to state 64
    C_BOOL          shift and go to state 56
    C_INT           shift and go to state 55
    C_FLOAT         shift and go to state 59
    C_CHAR          shift and go to state 58
    C_STRING        shift and go to state 57

    term                           shift and go to state 52
    funct                          shift and go to state 54
    exp                            shift and go to state 60
    factor                         shift and go to state 61
    cvar                           shift and go to state 62
    expression                     shift and go to state 63

state 39

    (5) camDeclaration -> CAM WEBCAM COLON ID . NEWLINE

    NEWLINE         shift and go to state 65


state 40

    (6) camDeclaration -> CAM PICAM COLON ID . NEWLINE

    NEWLINE         shift and go to state 66


state 41

    (3) hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .

    BOOL            reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    INT             reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    FLOAT           reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    CHAR            reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    STRING          reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    IMAGE           reduce using rule 3 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)


state 42

    (12) pwmDeclaration -> PWM . pinList NEWLINE
    (13) pinList -> . C_INT COLON ID
    (14) pinList -> . C_INT COLON ID COMMA pinList

    C_INT           shift and go to state 32

    pinList                        shift and go to state 67

state 43

    (11) pwmDeclaration -> empty .

    BOOL            reduce using rule 11 (pwmDeclaration -> empty .)
    INT             reduce using rule 11 (pwmDeclaration -> empty .)
    FLOAT           reduce using rule 11 (pwmDeclaration -> empty .)
    CHAR            reduce using rule 11 (pwmDeclaration -> empty .)
    STRING          reduce using rule 11 (pwmDeclaration -> empty .)
    IMAGE           reduce using rule 11 (pwmDeclaration -> empty .)


state 44

    (10) outputsDeclaration -> OUTPUT pinList . NEWLINE

    NEWLINE         shift and go to state 68


state 45

    (8) inputsDeclaration -> INPUT pinList NEWLINE .

    OUTPUT          reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    PWM             reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    BOOL            reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    INT             reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    FLOAT           reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    CHAR            reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    STRING          reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)
    IMAGE           reduce using rule 8 (inputsDeclaration -> INPUT pinList NEWLINE .)


state 46

    (13) pinList -> C_INT COLON . ID
    (14) pinList -> C_INT COLON . ID COMMA pinList

    ID              shift and go to state 69


state 47

    (17) idList -> ID COMMA idList .

    NEWLINE         reduce using rule 17 (idList -> ID COMMA idList .)


state 48

    (31) main -> VOID . MAIN LPAREN RPAREN NEWLINE block
    (32) main -> VOID . MAIN LPAREN tipo ID parameterList RPAREN NEWLINE block

    MAIN            shift and go to state 70


state 49

    (1) program -> PROGRAM ID NEWLINE hardware vars assign functions main .

    $end            reduce using rule 1 (program -> PROGRAM ID NEWLINE hardware vars assign functions main .)


state 50

    (24) functions -> tipo ID . LPAREN RPAREN NEWLINE block
    (25) functions -> tipo ID . LPAREN tipo ID parameterList RPAREN NEWLINE block

    LPAREN          shift and go to state 71


state 51

    (26) functions -> VOID ID . LPAREN RPAREN NEWLINE block
    (27) functions -> VOID ID . LPAREN tipo ID parameterList RPAREN NEWLINE block

    LPAREN          shift and go to state 72


state 52

    (57) exp -> term . moreTerms
    (58) moreTerms -> . empty
    (59) moreTerms -> . PLUS term moreTerms
    (60) moreTerms -> . MINUS term moreTerms
    (2) empty -> .

    PLUS            shift and go to state 74
    MINUS           shift and go to state 75
    GREATER_THAN    reduce using rule 2 (empty -> .)
    LESS_THAN       reduce using rule 2 (empty -> .)
    LESS_EQUAL_THAN reduce using rule 2 (empty -> .)
    GREATER_EQUAL_THAN reduce using rule 2 (empty -> .)
    NOT_EQUAL_THAN  reduce using rule 2 (empty -> .)
    SAME_AS         reduce using rule 2 (empty -> .)
    NEWLINE         reduce using rule 2 (empty -> .)
    RPAREN          reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)
    COLON           reduce using rule 2 (empty -> .)

    moreTerms                      shift and go to state 73
    empty                          shift and go to state 76

state 53

    (66) factor -> LPAREN . expression RPAREN
    (49) expression -> . exp
    (50) expression -> . exp compareToken exp
    (57) exp -> . term moreTerms
    (61) term -> . factor moreFactors
    (66) factor -> . LPAREN expression RPAREN
    (67) factor -> . cvar
    (68) factor -> . funct
    (69) cvar -> . ID
    (70) cvar -> . C_BOOL
    (71) cvar -> . C_INT
    (72) cvar -> . C_FLOAT
    (73) cvar -> . C_CHAR
    (74) cvar -> . C_STRING
    (45) funct -> . ID LPAREN RPAREN
    (46) funct -> . ID LPAREN expression expressionList RPAREN

    LPAREN          shift and go to state 53
    ID              shift and go to state 64
    C_BOOL          shift and go to state 56
    C_INT           shift and go to state 55
    C_FLOAT         shift and go to state 59
    C_CHAR          shift and go to state 58
    C_STRING        shift and go to state 57

    term                           shift and go to state 52
    funct                          shift and go to state 54
    exp                            shift and go to state 60
    factor                         shift and go to state 61
    cvar                           shift and go to state 62
    expression                     shift and go to state 77

state 54

    (68) factor -> funct .

    DIVIDE          reduce using rule 68 (factor -> funct .)
    TIMES           reduce using rule 68 (factor -> funct .)
    MOD             reduce using rule 68 (factor -> funct .)
    PLUS            reduce using rule 68 (factor -> funct .)
    MINUS           reduce using rule 68 (factor -> funct .)
    GREATER_THAN    reduce using rule 68 (factor -> funct .)
    LESS_THAN       reduce using rule 68 (factor -> funct .)
    LESS_EQUAL_THAN reduce using rule 68 (factor -> funct .)
    GREATER_EQUAL_THAN reduce using rule 68 (factor -> funct .)
    NOT_EQUAL_THAN  reduce using rule 68 (factor -> funct .)
    SAME_AS         reduce using rule 68 (factor -> funct .)
    COMMA           reduce using rule 68 (factor -> funct .)
    RPAREN          reduce using rule 68 (factor -> funct .)
    NEWLINE         reduce using rule 68 (factor -> funct .)
    COLON           reduce using rule 68 (factor -> funct .)


state 55

    (71) cvar -> C_INT .

    DIVIDE          reduce using rule 71 (cvar -> C_INT .)
    TIMES           reduce using rule 71 (cvar -> C_INT .)
    MOD             reduce using rule 71 (cvar -> C_INT .)
    PLUS            reduce using rule 71 (cvar -> C_INT .)
    MINUS           reduce using rule 71 (cvar -> C_INT .)
    GREATER_THAN    reduce using rule 71 (cvar -> C_INT .)
    LESS_THAN       reduce using rule 71 (cvar -> C_INT .)
    LESS_EQUAL_THAN reduce using rule 71 (cvar -> C_INT .)
    GREATER_EQUAL_THAN reduce using rule 71 (cvar -> C_INT .)
    NOT_EQUAL_THAN  reduce using rule 71 (cvar -> C_INT .)
    SAME_AS         reduce using rule 71 (cvar -> C_INT .)
    COLON           reduce using rule 71 (cvar -> C_INT .)
    NEWLINE         reduce using rule 71 (cvar -> C_INT .)
    RPAREN          reduce using rule 71 (cvar -> C_INT .)
    COMMA           reduce using rule 71 (cvar -> C_INT .)


state 56

    (70) cvar -> C_BOOL .

    DIVIDE          reduce using rule 70 (cvar -> C_BOOL .)
    TIMES           reduce using rule 70 (cvar -> C_BOOL .)
    MOD             reduce using rule 70 (cvar -> C_BOOL .)
    PLUS            reduce using rule 70 (cvar -> C_BOOL .)
    MINUS           reduce using rule 70 (cvar -> C_BOOL .)
    GREATER_THAN    reduce using rule 70 (cvar -> C_BOOL .)
    LESS_THAN       reduce using rule 70 (cvar -> C_BOOL .)
    LESS_EQUAL_THAN reduce using rule 70 (cvar -> C_BOOL .)
    GREATER_EQUAL_THAN reduce using rule 70 (cvar -> C_BOOL .)
    NOT_EQUAL_THAN  reduce using rule 70 (cvar -> C_BOOL .)
    SAME_AS         reduce using rule 70 (cvar -> C_BOOL .)
    COLON           reduce using rule 70 (cvar -> C_BOOL .)
    NEWLINE         reduce using rule 70 (cvar -> C_BOOL .)
    RPAREN          reduce using rule 70 (cvar -> C_BOOL .)
    COMMA           reduce using rule 70 (cvar -> C_BOOL .)


state 57

    (74) cvar -> C_STRING .

    DIVIDE          reduce using rule 74 (cvar -> C_STRING .)
    TIMES           reduce using rule 74 (cvar -> C_STRING .)
    MOD             reduce using rule 74 (cvar -> C_STRING .)
    PLUS            reduce using rule 74 (cvar -> C_STRING .)
    MINUS           reduce using rule 74 (cvar -> C_STRING .)
    GREATER_THAN    reduce using rule 74 (cvar -> C_STRING .)
    LESS_THAN       reduce using rule 74 (cvar -> C_STRING .)
    LESS_EQUAL_THAN reduce using rule 74 (cvar -> C_STRING .)
    GREATER_EQUAL_THAN reduce using rule 74 (cvar -> C_STRING .)
    NOT_EQUAL_THAN  reduce using rule 74 (cvar -> C_STRING .)
    SAME_AS         reduce using rule 74 (cvar -> C_STRING .)
    COLON           reduce using rule 74 (cvar -> C_STRING .)
    NEWLINE         reduce using rule 74 (cvar -> C_STRING .)
    RPAREN          reduce using rule 74 (cvar -> C_STRING .)
    COMMA           reduce using rule 74 (cvar -> C_STRING .)


state 58

    (73) cvar -> C_CHAR .
